# TAC-transformer

./: .env.example  .gitattributes  .gitignore  .replit  EVIDENCE_AUDIT.md  LICENSE  LIMITATIONS.md  README.md  REPRODUCIBILITY.md  RESULTS_SUMMARY.md  TECHNICAL_REPORT.md  agent.md  index.html  metrics_v02.json  package-lock.json  package.json  prd.json  prd.v02.json  progress.txt  pyproject.toml  requirements.txt  research.md  transformer_112m.py  v02_stability_report.md
configs/: tac_v02_112m.py  tac_v02_50m.py
convex/: admin.js  clients.js  orders.js  schema.js
docs/: REAL017_AUDIT.md  agentic_architecture_research_recommendation.md  agentic_objective_experiments.md  attention_identity_fusion_experiments.md  automated_research_synthesis_promotion.md  benchmark_results.md  best_tac_architecture.md  bidirectional_evolutionary_search.md  capability_sanity_gate.md  causal_audit_content_memory.md  content_addressed_full_matrix_validation.md  content_addressed_memory_validation.md  creb_load_balancing_validation.md  dataset_preparation.md  distillation_dataset_builder.md  effectiveness_benchmark_runbook.md  evolutionary_tac_search.md  hard_agentic_corpus.md  harder_chunked_creb_validation.md  harder_research_matrix.md  hrm_engram_phase1_results.md  hybrid_mixer_experiments.md  id001_identity_carry_validation.md  inference_profile_validation.md  iterative_retrieval_validation.md  kaggle_benchmark_runbook.md  kaggle_content_addressed_training_readiness.md  kaggle_identity_first_run3_preflight.md  kaggle_ready_synthesis_handoff.md  kaggle_synthesis_training_preflight.md  repo_cleanup_plan.md  (+60 more)
(+500 files in other folders)
