[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tac-transformer"
version = "0.1.0"
description = "Experimental persistent-state and structure-centric transformer research package."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "FPC-effortless" }
]
license = { text = "Apache-2.0" }
dependencies = [
  "torch>=2.0",
  "numpy>=1.24"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]
serving = [
  "gradio>=4.0"
]

[tool.setuptools.packages.find]
include = ["tac_transformer*"]
exclude = ["runs*", "outputs*", "Training data*"]

[tool.pytest.ini_options]
testpaths = ["tests_py", "tests"]
python_files = ["test_*.py"]
